2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/cons.py:
	* gaupol/const.py:
	* gaupol/gtk/cons.py:
	* gaupol/gtk/const.py:
	Rename to const.

2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/cons.py:
	* gaupol/base/const.py:
	Rename to const.

2007-04-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/observable.py:
	* gaupol/util.py:
	Move notify_frozen to util.

2007-04-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/main.py:
	Set util.CHECK_CONTRACTS based on --debug.

	* gaupol/util.py:
	Add contractual decorator.
	Remove old unused crap.

2007-04-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/unittest/case.py (TestCase.get_text):
	Use util.memoize.

	* gaupol/util.py (memoize):
	Do not pickle the self argument of methods.

2007-04-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/unittest/case.py:
	* gaupol/unittest/decorators.py:
	* gaupol/unittest/__init__.py:
	Minor changes.

2007-04-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_actions/edit.py:
	* gaupol/gtk/_actions/file.py:
	* gaupol/gtk/_actions/position.py:
	* gaupol/gtk/_actions/search.py:
	* gaupol/gtk/_actions/spellcheck.py:
	Replaced three dots with U+2026 ellipses.

2007-04-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/_agents/edit.py:
	* gaupol/_agents/open.py:
	* gaupol/_agents/save.py:
	* gaupol/_agents/support.py:
	* gaupol/_agents/text.py:
	* gaupol/base/cons.py:
	* gaupol/base/_mutables.py:
	* gaupol/clipboard.py:
	* gaupol/files/microdvd.py:
	* gaupol/files/mpl2.py:
	* gaupol/files/mpsub.py:
	* gaupol/files/ssa.py:
	* gaupol/files/subrip.py:
	* gaupol/files/subviewer2.py:
	* gaupol/files/tmplayer.py:
	* gaupol/gtk/_actions/__init__.py:
	* gaupol/gtk/_agents/open.py:
	* gaupol/gtk/conf/wrappers.py:
	* gaupol/gtk/dialogs/multiclose.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/lengthlib.py:
	* gaupol/gtk/main.py:
	* gaupol/gtk/view.py:
	* gaupol/liner.py:
	* gaupol/parser.py:
	* gaupol/util.py:
	* tools/translate: